extends Menu


func _on_back_button_pressed():
	GameManager.back()


func _on_1_pressed():
	GameManager.load_level(1)


func _on_2_pressed():
	GameManager.load_level(2)


func _on_3_pressed():
	GameManager.load_level(3)


func _on_4_pressed():
	GameManager.load_level(4)


func _on_5_pressed():
	GameManager.load_level(5)


func _on_6_pressed():
	GameManager.load_level(6)


func _on_7_pressed():
	GameManager.load_level(7)


func _on_8_pressed():
	GameManager.load_level(8)


func _on_9_pressed():
	GameManager.load_level(9)


func _on_10_pressed():
	GameManager.load_level(10)


func _on_11_pressed():
	GameManager.load_level(11)


func _on_12_pressed():
	GameManager.load_level(12)


func _on_13_pressed():
	GameManager.load_level(13)


func _on_14_pressed():
	GameManager.load_level(14)


func _on_15_pressed():
	GameManager.load_level(15)
